Release v1.0.6